<resources>
    <string name="app_name">HappyMaskShopOfHorrors</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="enterShop">Enter</string>
    <string name="first_time_create_account">First time? Create account!</string>
    <string name="the_happy_mask_shop_title">The Happy Mask Shop Title</string>
    <string name="shop_front">Shop Front</string>
    <string name="logout">Exit Shop</string>
    <string name="search">I want something specific.</string>
    <string name="random_item">Any helpful suggestions?</string>
    <string name="category_browse">Browse items by category.</string>
    <string name="order_history">My order history.</string>
    <string name="view_cart">View my cart.</string>
    <string name="whip_crack">Back of House</string>
    <string name="new_customer">Thank you for signing up, valued customer! Please tell me:</string>
    <string name="cust_name">Your name</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="create_username">Create username</string>
    <string name="create_password">Create password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_item">Search</string>
    <string name="suggest_item">Suggest</string>
    <string name="my_cart">My Cart</string>
    <string name="categories">Categories</string>
    <string name="my_orders">My Orders</string>
    <string name="log_out">Log Out</string>
    <string name="work_a_shift_behind_the_counter">Work a shift behind the counter</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="were_you_looking_for_this">Were you looking for this?</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="Greet">What can I do for you today, </string>
    <string name="portal_gun_description">Aperture Hand-held Portal Device: 1618 gold\nNote: For testing purposes only. Under no circumstances point this at the moon.</string>
    <string name="blue_shell_description">Blue Shell: 35 gold\nWinners beware! Use in case someone gets waaaaaay too ahead of the rest.</string>
    <string name="buster_sword_description">Buster Sword: 450 gold\nLook, I\'m not gonna sit here and tell you it doesn\'t look cool, but is it practical?</string>
    <string name="cubone_description">Cubone Mask: 44 gold\n You know there\'s gotta be a sad story behind this thing, right? Offers mild protection from physical but not emotional attacks.</string>
    <string name="fairy_description">Fairy in a Bottle: 80 gold\nShe patches you up when you\'re defeated. Wait a minute… is this Navi???</string>
    <string name="loki_description">Loki Mask: 404 gold\nWatch out with this one, he gets quite zany at night. Somebody stop him! </string>
    <string name="l_piece_description">l Piece: 20 gold\nTetris! I suppose you could use this to bash some Stalfos over the head if you needed to.</string>
    <string name="miraak_description">Miraak Mask: 200 gold\nThe price of knowledge is often repaid to an unspeakable cosmic horror of tangled tentacles and bubbling eyes.</string>
    <string name="nihilus_description">Nihilus Mask: 205 gold\nHave you ever heard the parable of Pelagius the Wise? Well this is not he. But still works well if you need to take care of some younglings.</string>
    <string name="ocarina_description">Ocarina of Time: 330 gold\nPlay a little ditty and find yourself whisked away on the wind to anywhere in Hyrule. Also helpful if you want to milk some cows.</string>
    <string name="pipBoy_description">Pip Boy: 100 gold\nThis will help you navigate the barren wastelands beyond this place. Maybe don\'t strap it on your body though, my Geiger counter is going nuts</string>
    <string name="predator_description">Predator Mask: 175 gold\nThe visage of a hunter from beyond the stars. If you find yourself in their sights, don\'t bother with the Ocarina. Just run.</string>
    <string name="wabbajack_description">Wabbajack: 223 gold\n This Daedric artifact belongs to the Prince of Madness. I wonder what would happen if you used this along with Loki\'s mask? </string>
    <string name="windwaker_description">Windwaker: 300 gold\nSummon the wind and sail across the vast expanses of Hyrule Ocean. </string>
    <string name="deku_shield_desc">Deku Shield: 12 gold\nOffers slight protection from the monsters of Hyrule. Perfect for kids or short adventurers. Made from the bark of the Great Deku Tree.</string>
    <string name="dragonpriest_mask_description">Dragonpriest Mask: 300 gold\nGreat for Fus Roh Dahing trolls off of High Hrothgar. Don\'t worry about the smell, 1000 years on a corpse will do that.</string>
    <string name="mana_potion_description">Mana Potion: 15 gold\n For when you couldn\'t cast another fireball, just take a swig and get back to incinerating draugr.</string>
    <string name="pegasus_description">Pegasus Boots: 200 gold\n These are necessary to advance in some dungeon or another, probably. They\'re like Red Bull for your feet!</string>
    <string name="phoenix_description">Phoenix Down: 30 gold\nParty members lying down on the job? Tickle them with this and watch them spring to their feet! Plucked from a phoenix while it slept.</string>
    <string name="wooden_shield_description">Wooden Shield: 40 gold\nSturdy protection for Hylian adventurers. Warranty voided if used at Death Mountain volcano or any fire-type dungeon.</string>
    <string name="meridia_description">Meridia\'s Beacon: 0 gold\nSorry for doing this to you, but it\'s already in your inventory. A new hand touches the beacon!</string>
    <string name="master_sword_description">Master Sword: 400 gold\nThe sword destined for the Hero of Time! Allows you to do the whirly attack thing.</string>
    <string name="health_potion_description">Health Potion: 10 gold\nRecovers a moderate amount of HP. Quick, gulp it down now before the thing that\'s trying to kill you comes back! Please drink responsibly.</string>
    <string name="heart_container_description">Heart Container: 150 gold\nUse this to increase your max health. Now you can take a more severe beating! Neat!</string>
    <string name="hookshot_description">Hookshot: 100 gold\nPoint, hook, and launch yourself bodily to those suspicious target-looking decorations in that one dungeon. Great for dragging enemies as well!</string>
    <string name="hylian_shield_description">Hylian Shield: 75 gold\nOnly the most skilled blacksmiths ih Hyrule can craft these. Suitable for any worthy hero.</string>
    <string name="iron_boots_description">Iron Boots: 150 gold\n Needed for the Water Temple, which everyone hates. Great for strength training, Rock Lee style!</string>
    <string name="majoras_description">Majora\'s Mask: 666 gold\nOnce used by Skull Kid to drag the Moon to Termina, now just a fancy mask for your next dinner party!</string>
    <string name="my_account">My Account</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="checkout">Checkout</string>
    <string name="barter">Barter</string>
    <string name="barter_message">Tell me, what do you think is a fair trade for the marvelous items below?</string>
    <string name="make_offer">Make Offer</string>
    <string name="default_text">Default Text</string>
    <string name="your_offer">Your offer</string>
    <string name="cancel">Cancel</string>
    <string name="sent_to">Sent to: </string>
    <string name="change_password">Change Password</string>
    <string name="exile">If I ever see you around here again, I will turn you into a Deku Scrub and use you for kindling. Take this mask as a warning and</string>
    <string name="change_address">Change Address</string>
    <string name="search_prompt">Are you looking for an item in particular?</string>
    <string name="go_to_item">Go to item</string>
    <string name="new_address_query">What\'s your new address?</string>
    <string name="new_address">New Address</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="manage_clients">Manage Clients</string>
    <string name="clock_out">Clock out</string>
    <string name="banhammer_query">Lay the Banhammer on who?</string>
    <string name="blocklist">Blocklist</string>
    <string name="clientelle">Clientelle</string>
    <string name="deny">Deny</string>
    <string name="approve">Approve</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="return_to_counter">Return to counter</string>
    <string name="treasure">Plus the following treasure:</string>
    <string name="gold">gold</string>
    <string name="hoard">Your hoard has grown to an impressive:</string>
</resources>