<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#907F7F"
    android:backgroundTint="#FDFCFC">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="392dp"
        android:layout_height="65dp"
        android:text="@string/new_customer"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/custName"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/cust_name"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/userTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repeatPass"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:hint="@string/repeat_password"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/userAddress"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="120dp"
        android:hint="@string/address"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/create_username"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/createPass"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/createPass"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/create_password"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/repeatPass"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/userTitle"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/title"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/userAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="407dp"
        android:layout_height="460dp"
        android:layout_marginTop="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happymaskquery" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="193dp"
        android:layout_height="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>