<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    tools:context="com.example.happymaskshopofhorrors.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="51dp"
        android:contentDescription="@string/the_happy_mask_shop_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_35303_0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="123dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:hint="@string/password"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="195dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:hint="@string/username"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="178dp"
        android:layout_height="59dp"
        android:backgroundTint="#00A04949"
        android:text="@string/enterShop"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:iconTint="#D65656"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/FTCAccountButton"
        android:layout_width="361dp"
        android:layout_height="43dp"
        android:backgroundTint="#00A04949"
        android:text="@string/first_time_create_account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>