<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    tools:context="com.example.happymaskshopofhorrors.activities.MainActivity">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="196dp"
        android:layout_height="73dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="196dp"
        android:layout_height="73dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="196dp"
        android:layout_height="73dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="196dp"
        android:layout_height="73dp"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="196dp"
        android:layout_height="73dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="196dp"
        android:layout_height="73dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/istockphoto_1151669762_170667a" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="105dp"
        android:layout_height="47dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/search_item"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/log_out"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <Button
        android:id="@+id/myCartButton"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/my_cart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <Button
        android:id="@+id/myOrdersButton"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/my_orders"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />

    <Button
        android:id="@+id/suggestItemButton"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/suggest_item"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <Button
        android:id="@+id/accountButton"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/my_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <Button
        android:id="@+id/workButton"
        android:layout_width="379dp"
        android:layout_height="43dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/work_a_shift_behind_the_counter"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="292dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="341dp"
        android:text="@string/Greet"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/custTitleName"
        android:layout_width="282dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="365dp"
        android:text="@string/default_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/happymaskquery"
        android:layout_width="407dp"
        android:layout_height="460dp"
        android:layout_marginTop="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happymaskquery" />

</androidx.constraintlayout.widget.ConstraintLayout>

