<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newAddressInput"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="476dp"
        android:ems="10"
        android:hint="@string/new_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addImage5"
        android:layout_width="177dp"
        android:layout_height="97dp"
        android:layout_marginStart="216dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wood_sign" />

    <Button
        android:id="@+id/cancelAddy"
        android:layout_width="155dp"
        android:layout_height="80dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/addImage5"
        app:layout_constraintEnd_toEndOf="@+id/addImage5"
        app:layout_constraintStart_toStartOf="@+id/addImage5"
        app:layout_constraintTop_toTopOf="@+id/addImage5" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happymaskquery" />

    <ImageView
        android:id="@+id/addImage4"
        android:layout_width="177dp"
        android:layout_height="97dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wood_sign" />

    <Button
        android:id="@+id/changeAddyButton"
        android:layout_width="155dp"
        android:layout_height="80dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/change_address"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/addImage4"
        app:layout_constraintEnd_toEndOf="@+id/addImage4"
        app:layout_constraintStart_toStartOf="@+id/addImage4"
        app:layout_constraintTop_toTopOf="@+id/addImage4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="165dp"
        android:layout_height="59dp"
        android:text="@string/new_address_query"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>