<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/goToItem"
        android:layout_width="177dp"
        android:layout_height="80dp"
        android:backgroundTint="#00A04949"
        android:text="@string/go_to_item"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:iconTint="#D65656"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happymaskquery" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:text="@string/search_prompt"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteItemSearch"
        android:layout_width="239dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:hint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="242dp"
        android:layout_height="89dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteItemSearch"
        app:srcCompat="@drawable/wood_sign" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="165dp"
        android:layout_height="145dp"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/majorasmask" />

</androidx.constraintlayout.widget.ConstraintLayout>